--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 /* Write your CSS here! */
-body {
-    margin: 8px;
+html {
     display: block;
-    padding: 0px 300px 20px;
-    background-color: rgb(226, 247, 247);
+    padding: 0px 25% 0px;
 }
-main{
-    background-color:rgb(246, 242, 242);
+body{
+    background-image: linear-gradient(90deg, rgb(189, 189, 189) 25%, white 25%, white 75%, rgb(189, 189, 189) 75%);
+    background-size: 100% 100%;
+    margin: 8px;
 }
 
 li{
@@ -20,11 +20,13 @@ ul{
 #mainHeading{
     text-align:center;
     color: red;
+    padding: 50px 50px 0px
 }
 
 .funParagraph{
     color: green;
     text-align: center;
+    padding: 50px 50px 50px;
 }
 
 #right{
@@ -39,6 +41,7 @@ ul{
     max-width: 40%;
     height: auto;
     float: left;
+    padding: 0px 5px 5px;
     
 }
 
@@ -46,19 +49,22 @@ ul{
     max-width: 25%;
     height: auto;
     float: right;
+    padding: 0px 5px 5px;
 }
 
 article{
-    padding: 30px 30px 30px
+    padding: 30px 30px 20px
 }
 
 hr.dotted {
     border-top: 3px solid #000000;
-    padding: 0px 0px 00px 0px;
+    padding: 0px 0px 0px 0px;
 }
 
 p{
-    padding: 60px 5px 5px;
+    padding: 5px 5px 5px;
+    display: block;
+    font-size: 16px;
     
 }
 
@@ -69,4 +75,17 @@ p{
     opacity: 35%;
     width: 300px;
 }
+
+
+
+h3{
+    font-weight: 100;
+    font-style: italic;
+    color: #293241;
+    padding: 5px 0px 0px;
+    font-size: 20px;
+    
+}
+
+
 
